=== 0.5 ===
2011-10-31  Aki Sasaki  <aki@mozilla.com>
* mozharness/test/device.py:
    Removed all flag file references.

* scripts/device_talosrunner.py:
    Removed all flag file references.

* mozharness/test/device.py (DeviceMixin.cleanup_device):
    Added killall; made this a bit more automation friendly.

2011-10-28  Aki Sasaki  <aki@mozilla.com>
* mozharness/base/script.py (ShellMixin.get_output_from_command):
    rmtree the tmpfiles with log_level=DEBUG (got tired of seeing that output all the time)

* mozharness/test/device.py (DeviceMixin):
    Removed devicemanager references.
    Removed vestiges of sut support.

* mozharness/test/device.py (DeviceMixin.query_devicemanager):
    Removed.

* mozharness/test/device.py (DeviceMixin.query_device_root):
    Changed to use adb rather than devicemanager calls.

* mozharness/test/device.py (DeviceMixin.query_device_file_exists):
    Added to replace dm.dirExists() and dm.fileExists().

* mozharness/test/device.py (DeviceMixin.remove_device_root):
    Changed to use adb rather than devicemanager calls.

* mozharness/test/device.py (DeviceMixin.uninstall_app):
    Changed to use adb rather than devicemanager calls.

* mozharness/test/device.py (DeviceMixin.ping_device):
    Removed check to see if we're using adb (assuemd, now)

* mozharness/test/device.py (DeviceMixin.check_device):
    Changed to use adb rather than devicemanager calls.

* unit.sh:
    Removed devicemanager-related error suppression.

* mozharness/base/errors.py
    Added "unable to connect to " to ADBErrorList.

* mozharness/test/device.py (DeviceMixin.reboot_device):
    Watched for existence of the subprocess pid: it doesn't exit throughout
    reboot_device, but exits by end of script.  WFM.  Removed all attempts
    to forcibly kill the pid.

2011-10-27  Aki Sasaki  <aki@mozilla.com>
* mozharness/base/log.py (LogMixin.log):
    If logging a fatal error message, call self.exit_on_error() if it